--- a/BoatEgo/Properties/Resources.resx
+++ b/BoatEgo/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="chest" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\media\chest.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="computer" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\computer.json;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="diver" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\media\diver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
